# weatherstation

./: CMakeLists.txt  HorizontalLine.qml  ItemWeather.qml  ItemWeatherBig.qml  ItemWeatherSmall.qml  Main.qml  VerticalLine.qml  apirest.cpp  apirest.h  main.cpp  resources.qrc
json/: roma-formatted.json  roma-it.json  roma.json
